integration ->login&register&submit&view
