# backend/src/routes/report.js
@@ -4,7 +4,8 @@ const {
   getReports,
   analyzeReport,
   getPendingReports,
-  saveAnalysis
+  saveAnalysis,
+  updateInvestigatorDecision
 } = require("../controllers/reportController");
 
 const router = express.Router();
@@ -16,5 +17,7 @@ router.get("/forensics/:id", analyzeReport);
 //routes for bot
 router.get("/pending-reports", getPendingReports);
 router.post("/analyzed-report", saveAnalysis);
+
+router.patch('/report/:id/decision', updateInvestigatorDecision);
 
 module.exports = router;
